Refactor into separate pages

--- a/src/FreshRcu/appsettings.json
+++ b/src/FreshRcu/appsettings.json
@@ -4,8 +4,8 @@
   },
   "Rcu": {
     "Host": "192.168.10.45",
-    "Username": "",
-    "Password": ""
+    "Username": "linus",
+    "Password": "minsnorre23"
   },
   "Logging": {
     "LogLevel": {
